# etra_challenge

./: .gitignore  .nojekyll  README.md  _quarto.yaml  custom.scss  etra.py  etra_challenge.html  etra_challenge.qmd  etra_challenge_report.ipynb  index.html  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml
_freeze/etra_challenge/execute-results/: html.json  tex.json
etra_challenge_files/libs/bootstrap/: bootstrap.min.css
site_libs/bootstrap/: bootstrap.min.css
