[tool.poetry]
name = "etra_challenge"
version = "0.1.0"
description = "Data Analysis for the ETRA Dataset"
authors = ["David Kubek <david.kubek@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
jupyterlab = "^3.5.0"
pretty-jupyter = "^2.0.2"
missingno = "^0.5.1"
remodnav = "^1.1.1"
statsmodels = "^0.13.5"
cateyes = { git = "https://github.com/dkubek/cateyes", branch = "main" }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
yapf = "^0.32.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
