[tool.poetry]
name = "etra_challenge"
version = "0.1.0"
description = "Data Analysis for the ETRA Dataset"
authors = ["David Kubek <david.kubek@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
seaborn = "^0.12.1"
remodnav = "^1.1.1"
statsmodels = "^0.13.5"
pymc = "^5.0.2"
pandas = "^1.5.3"

[tool.poetry.group.publish.dependencies]
jupyter-cache = "^0.5.0"
jupyter = "^1.0.0"
jupyter-client = "7.4.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
yapf = "^0.32.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
